@@ -1,8 +1,8 @@
 {
-  "timestamp" : "2024-05-21T00:40:39Z",
-  "count" : 3,
+  "timestamp" : "2024-06-03T01:23:30Z",
+  "count" : 2,
   "count_minmax" : [ 1, 3 ],
-  "count_decinc" : [ -0, +3 ],
+  "count_decinc" : [ -1, +3 ],
   "uniques" : 2,
   "uniques_minmax" : [ 1, 2 ],
   "uniques_decinc" : [ -0, +2 ]
