@@ -1,24 +1,15 @@
 {
-  "timestamp" : "2024-06-02T12:33:12Z",
-  "count_outdated" : 7724,
-  "uniques_outdated" : 3371,
-  "count" : 7830,
+  "timestamp" : "2024-06-03T01:23:30Z",
+  "count_outdated" : 7729,
+  "uniques_outdated" : 3374,
+  "count" : 7831,
   "uniques" : 3443,
   "clones" : [
     {
-      "timestamp": "2024-05-19T00:00:00Z",
-      "count": 3,
-      "count_minmax": [ 1, 5 ],
-      "count_decinc": [ 2, 5 ],
-      "uniques": 2,
-      "uniques_minmax": [ 1, 3 ],
-      "uniques_decinc": [ 1, 3 ]
-    },
-    {
       "timestamp": "2024-05-20T00:00:00Z",
-      "count": 3,
+      "count": 2,
       "count_minmax": [ 1, 3 ],
-      "count_decinc": [ 0, 3 ],
+      "count_decinc": [ 1, 3 ],
       "uniques": 2,
       "uniques_minmax": [ 1, 2 ],
       "uniques_decinc": [ 0, 2 ]
@@ -133,9 +124,9 @@
     },
     {
       "timestamp": "2024-06-02T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
-      "count_decinc": [ 0, 1 ],
+      "count": 2,
+      "count_minmax": [ 1, 2 ],
+      "count_decinc": [ 0, 2 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ],
       "uniques_decinc": [ 0, 1 ]
