@@ -1,15 +1,10 @@
 {
-  "count": 104,
+  "count": 101,
   "uniques": 49,
   "clones": [
     {
-      "timestamp": "2024-05-19T00:00:00Z",
-      "count": 3,
-      "uniques": 2
-    },
-    {
       "timestamp": "2024-05-20T00:00:00Z",
-      "count": 3,
+      "count": 2,
       "uniques": 2
     },
     {
@@ -74,7 +69,7 @@
     },
     {
       "timestamp": "2024-06-02T00:00:00Z",
-      "count": 1,
+      "count": 2,
       "uniques": 1
     }
   ]
